# libpathrs

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  COPYING.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  build.rs  cbindgen.toml  codecov.yml  install.sh
.github/workflows/: bindings-c.yml  bindings-go.yml  bindings-python.yml  e2e-tests.yml  release.yml  rust.yml
contrib/bindings/python/: Makefile  pyproject.toml  setup.py
contrib/bindings/python/pathrs/: __init__.py  _internal.py  _pathrs.py  pathrs_build.py  procfs.py
contrib/bindings/python/pathrs/_libpathrs_cffi/: __init__.pyi  lib.pyi
contrib/fake-enosys/: Cargo.toml
contrib/fake-enosys/src/: bpf.rs  main.rs
docs/: avoidable-vulnerabilities.md  kernel-features.md  procfs-api.md
e2e-tests/: Makefile  README.md
e2e-tests/cmd/: .gitignore  README.md
e2e-tests/cmd/go/: Makefile  go.mod  go.sum  main.go  procfs.go  root.go  ux.go  ux_mode.go  ux_oflags.go
e2e-tests/cmd/python/: Makefile  pathrs-cmd.py
e2e-tests/cmd/rust/: Cargo.toml  Makefile
e2e-tests/cmd/rust/src/: main.rs  procfs.rs  root.rs  utils.rs  version.rs
e2e-tests/tests/: helpers.bash  meta.bats  procfs-open.bats  procfs-readlink.bats  root-create.bats  root-link.bats  root-readlink.bats  root-rename.bats  root-resolve.bats  root-rm.bats  version.bats
examples/: Makefile
examples/c/: Makefile  cat.c  cat_multithread.c
examples/go/: .gitignore  Makefile  cat.go  go.mod  sysctl.go
examples/python/: Makefile  cat.py  procfs.py  static_web.py  sysctl.py
examples/rust-cat/: Makefile  main.rs
go-pathrs/: .golangci.yml  doc.go  error_linux.go  go.mod  handle_linux.go  libpathrs_linux.go  procfs_linux.go  root_linux.go  utils_linux.go  version_linux.go
go-pathrs/internal/libpathrs/: libpathrs_linux.go
go-pathrs/procfs/: procfs_linux.go
hack/: check-elf-symbols.sh  ci-check-release-tag.sh  ci-compute-test-partition.jq  keyring-addkey.sh  keyring-validate.sh  release.sh  rust-tests.sh  with-crate-type.sh
include/: pathrs.h
src/: capi.rs  error.rs  flags.rs  handle.rs  lib.rs  procfs.rs  resolvers.rs  root.rs  syscalls.rs  tests.rs  utils.rs
src/capi/: cfg.rs  core.rs  error.rs  mod.rs  procfs.rs  ret.rs  utils.rs  version.rs
src/resolvers/: openat2.rs  procfs.rs
src/resolvers/opath/: imp.rs  symlink_stack.rs
src/tests/: test_procfs.rs  test_race_resolve_partial.rs  test_resolve.rs  test_resolve_partial.rs  test_root_ops.rs
src/tests/capi/: handle.rs  procfs.rs  root.rs  test_compat.rs  utils.rs
src/tests/common/: error.rs  handle.rs  mntns.rs  procfs.rs  root.rs  skip.rs
src/tests/traits/: error.rs  handle.rs  procfs.rs  root.rs
src/utils/: dir.rs  fd.rs  fdinfo.rs  kernel_version.rs  maybe_owned.rs  path.rs  raw_procfs.rs  sysctl.rs
