# SPDX-License-Identifier: MPL-2.0 OR LGPL-3.0-or-later
#
# libpathrs: safe path resolution on Linux
# Copyright (C) 2019-2025 SUSE LLC
# Copyright (C) 2026 Aleksa Sarai <cyphar@cyphar.com>
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "pathrs-cmd"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["string"] }
errno = "0.3"
libc = "0.2.181"
rustix = { version = "1", features = ["fs"] }

pathrs = { path = "../../.." }
